[package]
name = "sicily"
version = "0.1.0"
authors = ["jiachen bai <646329483@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0"
log = "0.4"
pnet = "0.28.0"
tokio = { version = "1", features = ["full"] }
sha2 = "0.9.8"
pretty_env_logger = "0.4.0"
structopt = "0.3"